--- a/src/Components/CircularMenu/Menu/Menu.css
+++ b/src/Components/CircularMenu/Menu/Menu.css
@@ -16,7 +16,7 @@
   background-color: transparent;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .menu {
     position: fixed;
     bottom: 30px;
@@ -50,7 +50,7 @@
   box-shadow: inset 0 0 10px 2px #e0e0e0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .menu .toggle {
     width: 200px;
     height: 200px;
@@ -77,7 +77,7 @@
   z-index: 1;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .menu .menu-item {
     transform-origin: 141px;
   }
@@ -107,7 +107,7 @@
   transform: rotate(calc(-120deg * var(--i))) translateX(0px);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .menu .menu-item img {
     width: 32px;
     height: 32px;
@@ -176,7 +176,7 @@
 .menu .menu-item:nth-child(18).active~.indicator { transform: translateX(-70px) rotate(257.14deg); }
 .menu .menu-item:nth-child(21).active~.indicator { transform: translateX(-70px) rotate(307.57deg); }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .indicator {
     width: 83px;
     height: 50px;
@@ -232,7 +232,7 @@
   pointer-events: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .nameId.active {
     width: 100px;
     height: 100px;
@@ -263,7 +263,7 @@
   cursor: pointer;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .circleButton {
     width: 72px;
     height: 72px;
